--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "app.js",
   "dependencies": {
     "ejs": "^2.3.4",
+    "express": "^4.13.3",
+    "express-session": "^1.13.0",
     "forever": "^0.15.1",
     "mongodb": "^2.0.49",
-    "express": "^4.13.3"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
