--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "author": "Michael Herman <michael@mherman.org>",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.3.4",
-    "jade": "^0.34.1",
-    "mongodb": "^1.3.23",
-    "mongoose": "^3.8.39",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "express": "^5.0.0-alpha.2",
+    "jade": "^1.11.0",
+    "mongodb": "^2.1.13",
+    "mongoose": "^4.4.10",
+    "passport": "*",
+    "passport-local": "*",
+    "passport-local-mongoose": "*"
   }
 }
