--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "body-parser": "^1.15.0",
     "chance": "^1.0.1",
     "cookie-parser": "^1.4.1",
+    "ejs": "^2.4.1",
     "errorhandler": "^1.4.3",
     "express": "^5.0.0-alpha.2",
+    "express-session": "^1.13.0",
     "jade": "^1.11.0",
     "method-override": "^2.3.5",
     "mongodb": "^2.1.13",
