Update package versions

--- a/package.json
+++ b/package.json
@@ -21,22 +21,19 @@
   "author": "Michael Herman <michael@mherman.org>",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.16",
     "chance": "^1.0.4",
     "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.2",
-    "errorhandler": "^1.4.3",
-    "express": "^5.0.0-alpha.2",
-    "express-session": "^1.14.2",
-    "jade": "^1.11.0",
-    "method-override": "^2.3.6",
-    "mongodb": "^2.2.11",
-    "mongoose": "^4.6.6",
-    "morgan": "^1.7.0",
+    "ejs": "^2.5.5",
+    "errorhandler": "^1.5.0",
+    "express": "^4.14.1",
+    "express-session": "^1.15.0",
+    "mongoose": "^4.8.1",
+    "morgan": "^1.8.0",
     "node-schedule": "^1.2.0",
-    "passport": "*",
-    "passport-local": "*",
-    "passport-local-mongoose": "*",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "request": "^2.79.0"
   }
 }
