--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "request": "^2.79.0"
+    "whatwg-fetch": "^2.0.3",
+    "youtube-player": "^4.2.2"
   },
   "private": true,
   "devDependencies": {
-    "eslint": "^3.16.1"
+    "eslint": "^3.16.1",
+    "webpack": "^2.2.1"
   }
 }
